--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -1,6 +1,6 @@
 .task {
     user-select: none;
-    width: 400px;
+    max-width: 400px;
     height: 30px;
     display: flex;
     flex-direction: row;
@@ -10,7 +10,7 @@
 .checkbox {
     background: #eee;
     cursor: pointer;
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     line-height: 30px;
     font-size: 12px;
@@ -22,7 +22,7 @@
     background: #eee;
     color: rgb(255, 100, 100);
     cursor: pointer;
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     line-height: 30px;
     font-size: 12px;
@@ -32,9 +32,13 @@
 
 .text {
     padding: 0 10px;
+    max-width: 400px;
     flex-grow: 1;
     background: #eee;
     line-height: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .task.done {
