--- a/src/components/TaskItem.scss
+++ b/src/components/TaskItem.scss
@@ -1,6 +1,8 @@
+@import '../constants/constants.scss';
+
 .taskItem {
     user-select: none;
-    max-width: 400px;
+    max-width: $task-length;
     height: 30px;
     display: flex;
     flex-direction: row;
@@ -31,13 +33,19 @@
     
     .text {
         padding: 0 10px;
-        max-width: 400px;
+        max-width: $task-length;
         flex-grow: 1;
         background: #eee;
         line-height: 30px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+
+    .tagList {
+        background: #eee;
+        display: flex;
+        flex-direction: row;
     }
     
     &.done {
