--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './constants/constants.scss';
+
 .app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   color: #2c3e50;
@@ -20,7 +22,7 @@
 }
 
 .taskList {
-  flex-grow: 0;
+  flex-grow: 1;
   margin-right: 10px;
 }
 
@@ -48,7 +50,7 @@
   display: flex;
   flex-direction: row;
   user-select: none;
-  width: 400px;
+  width: $task-length;
   height: 30px;
   display: flex;
   flex-direction: row;
