--- a/src/components/TaskItem.scss
+++ b/src/components/TaskItem.scss
@@ -3,60 +3,71 @@
 .taskItem {
   user-select: none;
   max-width: 100%;
-  height: 30px;
   display: flex;
-  flex-direction: row;
-  margin: 5px 0;
+  flex-direction: column;
+  margin: 5px 0 0;
 
-  .checkbox {
-    background: #eee;
-    cursor: pointer;
-    min-width: 30px;
+  .taskContent {
     height: 30px;
-    line-height: 30px;
-    font-size: 12px;
-    text-align: center;
-    margin-right: 5px;
-  }
-
-  .remove {
-    background: #eee;
-    color: rgb(255, 100, 100);
-    cursor: pointer;
-    min-width: 30px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 12px;
-    text-align: center;
-    margin-left: 5px;
-  }
-
-  .text {
-    padding: 0 10px;
-    max-width: 100%;
-    flex-grow: 1;
-    background: #eee;
-    line-height: 30px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
-  .tagList {
-    background: #eee;
     display: flex;
     flex-direction: row;
+
+    .checkbox {
+      background: #eee;
+      cursor: pointer;
+      min-width: 30px;
+      height: 30px;
+      line-height: 30px;
+      font-size: 15px;
+      text-align: center;
+      margin-right: 5px;
+    }
+
+    .remove {
+      background: #eee;
+      color: rgb(255, 100, 100);
+      cursor: pointer;
+      min-width: 30px;
+      height: 30px;
+      line-height: 30px;
+      font-size: 12px;
+      text-align: center;
+      margin-left: 5px;
+    }
+
+    .text {
+      padding: 0 10px;
+      max-width: 100%;
+      flex-grow: 1;
+      background: #eee;
+      line-height: 30px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    &.done {
+      color: $main-color;
+    }
+
+    &.selected > .text,
+    &.selected > .checkbox,
+    &.selected > .remove,
+    &.selected > .tagList {
+      background:$main-color;
+      color: white;
+    }
+
+    .tagList {
+      background: #eee;
+      display: flex;
+      flex-direction: row;
+    }
   }
 
-  &.done {
-    color: $main-color;
-  }
-
-  &.selected > .text,
-  &.selected > .checkbox,
-  &.selected > .remove,
-  &.selected > .tagList {
-    background:$main-color;
-    color: white;
+  .subtaskList {
+    display: flex;
+    flex-direction: column;
+    margin-left: 35px;
   }
 }
