--- a/src/components/TaskDetails.scss
+++ b/src/components/TaskDetails.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
 
-  .title {
+  .header {
     user-select: none;
     min-width: 100%;
     height: 30px;
@@ -29,7 +29,7 @@
       margin-right: 5px;
     }
 
-    .text {
+    .title {
       flex-grow: 1;
       padding: 0 10px;
       line-height: 30px;
