--- a/src/components/TaskItemLoad.scss
+++ b/src/components/TaskItemLoad.scss
@@ -16,7 +16,7 @@
         text-align: center;
         margin-right: 5px;
     }
-    
+
     .remove {
         background: #eee;
         color: rgb(255, 100, 100);
@@ -28,8 +28,8 @@
         text-align: center;
         margin-left: 5px;
     }
-    
-    .text {
+
+    .title {
         padding: 0 10px;
         max-width: 100%;
         flex-grow: 1;
@@ -38,7 +38,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-    
+
         background-image: linear-gradient(
           -62deg,
           #eee,
@@ -50,7 +50,7 @@
         background-size: 430px 30px;
         animation: move 1.5s linear infinite;
     }
-    
+
     @keyframes move {
         0% {
             background-position: 0 0;
@@ -59,5 +59,5 @@
             background-position: 430px 0;
         }
     }
-    
+
 }
